Adjustments, code is compiling now;